--- a/02.md
+++ b/02.md
@@ -23,28 +23,28 @@ contributor: "indhu-subash"
 
 ## Syllabus Modules
 
-### Module 1: Foundations & Finite Automata (11 Hours)
+### Module 1: Foundations & Finite Automata 
 - Motivation for studying computability, need for mathematical modeling.  
 - Automata through models: On/Off switch, coffee vending machine.  
 - Concepts: Alphabet, Strings, Languages.  
 - DFA, Regular languages, NFA, ε-transitions, equivalence of NFAs and DFAs, DFA minimization.  
 - Applications: text search, keyword recognition.
 
-### Module 2: Regular Expressions & CFGs (11 Hours)
+### Module 2: Regular Expressions & CFGs 
 - Definition and construction of regular expressions.  
 - Conversions between FA and RE.  
 - Regular grammar equivalence.  
 - Properties: Closure, Decision, Pumping Lemma (with proofs).  
 - CFGs: derivations, parse trees, ambiguity, programming language relation.
 
-### Module 3: PDA & Context-Free Languages (11 Hours)
+### Module 3: PDA & Context-Free Languages 
 - Definition of PDA, DPDA, NPDA, examples.  
 - Equivalence of PDA and CFG.  
 - Simplification: useless symbols, ε-productions, unit productions.  
 - Normal forms: Chomsky, Greibach.  
 - Pumping Lemma, Closure and Decision properties of CFLs.
 
-### Module 4: Turing Machines & Computability (11 Hours)
+### Module 4: Turing Machines & Computability 
 - Definition and examples of TMs.  
 - TMs as acceptors and function computers.  
 - TM variants, Recursive and recursively enumerable languages.  
