--- a/02.md
+++ b/02.md
@@ -1,12 +1,12 @@
 ---
-country: "India"
-university: "KTU"
-branch: "CSE"
+country: "india"
+university: "ktu"
+branch: "cse"
 version: "2024"
 semester: "3"
-course_code: "PCCST302"
-course_title: "Theory of Computation"
-language: "English"
+course_code: "pccst302"
+course_title: "theory-of-computation"
+language: "english"
 contributor: "indhu-subash"
 ---
 
