--- a/02.md
+++ b/02.md
@@ -4,10 +4,10 @@ university: "ktu"
 branch: "cse"
 version: "2024"
 semester: "3"
-course_code: "pccst302"
-course_title: "theory-of-computation"
+course-code: "pccst302"
+course-title: "theory-of-computation"
 language: "english"
-contributor: "indhu-subash"
+contributor: "@indhu-subash"
 ---
 
 # PCCST302: Theory of Computation
