--- a/S4/13.md
+++ b/S4/13.md
@@ -38,15 +38,14 @@ contributor: "@indhu-subash"
 - Gajski-Kuhn’s Y-chart, HDL-based hardware design  
 - Design verification: Testbench simulation, Property and Equivalence Checking, Static Timing Analysis  
 - Logic Synthesis, Physical Design: Partitioning, Floorplanning, Placement, Routing  
-- Microproject*  
+- Microproject
 
 ### Module 4: FSMs, Verilog, and FPGA
 - Finite State Machines: Mealy and Moore models  
 - Verilog HDL: RISC machine design and implementation  
 - FPGA architecture: Programming technology, PLBs, interconnects, I/O blocks  
 - FPGA design flow, SoC design on FPGA  
-- Microproject*
-> *Microproject on FPGA / Semi-Custom Flow.
+- Microproject
 ---
 
 ## Reference Books
