--- a/S4/14.md
+++ b/S4/14.md
@@ -12,16 +12,16 @@ contributor: "@indhu-subash"
 
 # PECST495: Advanced Data Structures
 
-## course objectives
+## Course Objectives
 
 1. To equip students with comprehensive knowledge of advanced data structures utilized in cutting-edge areas of computer science, including database management, cyber security, information retrieval, and networked systems.  
 2. To prepare students to address challenges in emerging fields of computer science by applying advanced data structures to practical, real-world problems.  
 
 ---
 
-## syllabus modules
+## Syllabus Modules
 
-### module 1: foundational data structures
+### Module 1: Foundational Data Structures
 - Overview of arrays and linked lists  
 - Implementation of pointers and objects  
 - Representing rooted trees  
@@ -29,19 +29,19 @@ contributor: "@indhu-subash"
 - Bloom filters: count-min sketch  
 - Applications: click stream processing, heavy hitters and count-min structures  
 
-### module 2: advanced tree data structures
+### Module 2: Advanced Tree Data Structures
 - Balanced trees: AVL trees (review), red-black trees  
 - Suffix trees and arrays, segment trees  
 - Heaps: binomial heap, Fibonacci heaps, Merkle trees  
 - Applications to IR and WWW: autocomplete using tries  
 
-### module 3: specialized data structures
+### Module 3: Specialized Data Structures
 - Spatial data structures: quadtree, K-D trees, R-trees  
 - Temporal structures: persistence, retroactivity  
 - Search & optimization: skip list, tango trees  
 - Applications: approximate nearest neighbor, posting list intersection  
 
-### module 4: data structure applications
+### Module 4: Data Structure Applications
 - Distributed & parallel: distributed hash tables, consistent hashing, distributed BST  
 - Data compression: Burrows-Wheeler transform, histogram, wavelet trees  
 - Cryptographic applications: hashing  
@@ -49,7 +49,7 @@ contributor: "@indhu-subash"
 ---
 
 
-##  Reference books
+##  Reference Books
 
 1. Suman Saha, Shailendra Shukla, *Advanced Data Structures: Theory and Applications*, CRC Press, 1/e, 2019  
 2. Peter Brass, *Advanced Data Structures*, Cambridge University Press, 1/e, 2008  
