--- a/S5/01.md
+++ b/S5/01.md
@@ -4,13 +4,13 @@ university: "ktu"
 branch: "cse"
 version: "2024"
 semester: "5"
-course-code: "pcccs301"
+course-code: "pccst501"
 course-title: "computer-networks"
 language: "english"
 contributor: "@indhu-subash"
 ---
 
-# PCCCS301: Computer Networks
+# PCCST501: Computer Networks
 
 ## Course Objectives
 
