--- a/S5/02.md
+++ b/S5/02.md
@@ -4,13 +4,13 @@ university: "ktu"
 branch: "cse"
 version: "2024"
 semester: "5"
-course-code: "pcccs302"
+course-code: "pccst502"
 course-title: "design-and-analysis-of-algorithms"
 language: "english"
 contributor: "@indhu-subash"
 ---
 
-# PCCCS302: Design and Analysis of Algorithms
+# PCCST502 : Design and Analysis of Algorithms
 
 ## Course Objectives
 
