--- a/S5/03.md
+++ b/S5/03.md
@@ -4,13 +4,13 @@ university: "ktu"
 branch: "cse"
 version: "2024"
 semester: "5"
-course-code: "peccs431"
+course-code: "pccst503"
 course-title: "machine-learning"
 language: "english"
 contributor: "@indhu-subash"
 ---
 
-# PECCS431: Machine Learning
+# PCCST503: Machine Learning
 
 ## Course Objectives
 
