--- a/S5/04.md
+++ b/S5/04.md
@@ -4,13 +4,13 @@ university: "ktu"
 branch: "cse"
 version: "2024"
 semester: "5"
-course-code: "peccs432"
+course-code: "pbcst504"
 course-title: "microcontrollers"
 language: "english"
 contributor: "@indhu-subash"
 ---
 
-# PECCS432: Microcontrollers
+# PBCST504: Microcontrollers
 
 ## Course Objectives
 
