--- a/S7/02.md
+++ b/S7/02.md
@@ -7,7 +7,7 @@ semester: "7"
 course-code: "pecst742"
 course-title: "web-development-technologies"
 language: "english"
-contributor: "Sharx05"
+contributor: "@Sharx05"
 ---
 
 # PECST742 : Web Development Technologies
